@@ -24,15 +24,13 @@
 # *
 # **************************************************************************
 
-import pyworkflow.em
 import xmipp3
 
 _logo = "icon.png"
 _references = ['you2019']
 
+
 class Plugin(xmipp3.Plugin):
     @classmethod
     def defineBinaries(cls, env):
         pass
-
-pyworkflow.em.Domain.registerPlugin(__name__)
