@@ -26,15 +26,17 @@
 # *
 # **************************************************************************
 
-import pyworkflow.em as em
-from pyworkflow.em.convert import ImageHandler
-import pyworkflow.em.metadata as md
-from pyworkflow.em.protocol import EMProtocol
+import pwem
+from pwem.emlib import MDL_IMAGE
+from pwem.emlib.image import ImageHandler
+from pwem.protocols import EMProtocol
+import pwem.metadata as md
+
 from pyworkflow.protocol.params import PointerParam
-from tomo.objects import SetOfSubTomograms
-from tomo.objects import AverageSubTomogram
 from xmipp3.convert import xmippToLocation, writeSetOfVolumes, alignmentToRow
-import xmippLib
+# Tomo plugin must be installed
+AverageSubTomogram = pwem.Domain.importFromPlugin('tomo.objects', 'AverageSubTomogram',
+                                                  doRaise=True)
 
 class XmippProtApplyTransformSubtomo(EMProtocol):
     """ Apply alignment matrix and produce a new set of subtomograms, with each subtomogram aligned to its reference. """
@@ -57,7 +59,7 @@ class XmippProtApplyTransformSubtomo(EMProtocol):
 
     # --------------------------- STEPS functions --------------------------------------------
     def convertInputStep(self, outputFn):
-        writeSetOfVolumes(self.inputSubtomograms.get(), outputFn, alignType=em.ALIGN_3D)
+        writeSetOfVolumes(self.inputSubtomograms.get(), outputFn, alignType=pwem.ALIGN_3D)
         return [outputFn]
 
     def applyAlignmentStep(self, inputFn):
@@ -72,10 +74,11 @@ class XmippProtApplyTransformSubtomo(EMProtocol):
         for row in md.iterRows(mdWindow):
             rowOut = md.Row()
             rowOut.copyFromRow(row)
-            id = row.getValue(xmippLib.MDL_IMAGE)
+            id = row.getValue(MDL_IMAGE)
             id = id.split('@')[0]
             id = id.strip('0')
-            alignmentToRow(self.inputSubtomograms.get().__getitem__(id).getTransform(), rowOut, em.ALIGN_3D)
+            alignmentToRow(self.inputSubtomograms.get().__getitem__(id).getTransform(), rowOut,
+                           pwem.ALIGN_3D)
             rowOut.addToMd(mdWindowTransform)
         mdWindowTransform.write(self._getExtraPath("window_with_original_geometry.xmd"))
         # Align subtomograms
@@ -97,7 +100,7 @@ class XmippProtApplyTransformSubtomo(EMProtocol):
         alignedSet.copyItems(subtomograms,
                              updateItemCallback=self._updateItem,
                              itemDataIterator=md.iterRows(inputMd, sortByLabel=md.MDL_ITEM_ID))
-        alignedSet.setAlignment(em.ALIGN_NONE)
+        alignedSet.setAlignment(pwem.ALIGN_NONE)
         avgFile = self._getExtraPath("average.xmp")
         imgh = ImageHandler()
         avgImage = imgh.computeAverage(alignedSet)
