@@ -1,3 +1,4 @@
+20-February-2020 Migration to python3
 1-October-2019 - (tagged with 1.skeleton)
     Just a python package, should work with "scipion installp -p /home/you/scipion-em-template/ --devel
 
